--- a/AGT.GalacticArchives.Api/appsettings.json
+++ b/AGT.GalacticArchives.Api/appsettings.json
@@ -12,7 +12,8 @@
     ],
     "Firebase": {
       "CredentialsPath": "firebase-credentials.json",
-      "ProjectId": "nms-free"
-    }
+      "ProjectId": "agt-galactic-archives-b9a30"
+    },
+    "EnableDeveloperErrors": true
   }
 }
