--- a/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
+++ b/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
@@ -7,12 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="9.0.0" />
       <PackageReference Include="AutoMapper" Version="15.1.0" />
       <PackageReference Include="AutoMapper.Collection" Version="12.0.0" />
       <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
       <PackageReference Include="Google.Cloud.Firestore" Version="3.13.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+      <PackageReference Include="NLog" Version="6.0.6" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="6.1.0" />
     </ItemGroup>
 
 </Project>
