Integrate Google Secret Manager for Firebase credentials retrieval

--- a/AGT.GalacticArchives.Api/appsettings.json
+++ b/AGT.GalacticArchives.Api/appsettings.json
@@ -14,6 +14,7 @@
       "CredentialsPath": "firebase-credentials.json",
       "ProjectId": "agt-galactic-archives-b9a30"
     },
-    "EnableDeveloperErrors": true
+    "EnableDeveloperErrors": true,
+    "GoogleCloudProjectId": "agt-galactic-archives-b9a30"
   }
 }
