--- a/AGT.GalacticArchives.Api/AGT.GalacticArchives.Api.csproj
+++ b/AGT.GalacticArchives.Api/AGT.GalacticArchives.Api.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
         <PackageReference Include="Google.Cloud.Firestore" Version="3.13.0" />
+        <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.7.0" />
         <PackageReference Include="HtmlSanitizer" Version="9.1.891-beta" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
