Setup connection to local firestore emulator

--- a/AGT.GalacticArchives.Api/Properties/launchSettings.json
+++ b/AGT.GalacticArchives.Api/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7009;http://localhost:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "FIRESTORE_EMULATOR_HOST": "localhost:8080"
       }
     }
   }
