--- a/AGT.GalacticArchives.Services/AGT.GalacticArchives.Services.csproj
+++ b/AGT.GalacticArchives.Services/AGT.GalacticArchives.Services.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)/../StyleCop.ruleset</CodeAnalysisRuleSet>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,6 +22,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\AGT.GalacticArchives.Core\AGT.GalacticArchives.Core.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AdditionalFiles Include="$(MSBuildThisFileDirectory)/../stylecop.json">
+            <Link>stylecop.json</Link>
+        </AdditionalFiles>
     </ItemGroup>
 
 </Project>
