--- a/AGT.GalacticArchives.Globalization/AGT.GalacticArchives.Globalization.csproj
+++ b/AGT.GalacticArchives.Globalization/AGT.GalacticArchives.Globalization.csproj
@@ -63,6 +63,10 @@
             <Generator>PublicResXFileCodeGenerator</Generator>
             <LastGenOutput>GalaxyResource.Designer.cs</LastGenOutput>
         </EmbeddedResource>
+        <EmbeddedResource Update="FirebaseResource.resx">
+          <Generator>PublicResXFileCodeGenerator</Generator>
+          <LastGenOutput>FirebaseResource.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -130,6 +134,11 @@
             <DesignTime>True</DesignTime>
             <AutoGen>True</AutoGen>
             <DependentUpon>GalaxyResource.resx</DependentUpon>
+        </Compile>
+        <Compile Update="FirebaseResource.Designer.cs">
+          <DesignTime>True</DesignTime>
+          <AutoGen>True</AutoGen>
+          <DependentUpon>FirebaseResource.resx</DependentUpon>
         </Compile>
     </ItemGroup>
 
