Added NLog config

--- a/AGT.GalacticArchives.Api/appsettings.json
+++ b/AGT.GalacticArchives.Api/appsettings.json
@@ -12,9 +12,31 @@
     ],
     "Firebase": {
       "CredentialsPath": "firebase-credentials.json",
-      "ProjectId": "agt-galactic-archives-b9a30"
+      "ProjectId": "agt-galactic-archives-b9a30",
+      "SecretsId": "firebase-credentials"
     },
     "EnableDeveloperErrors": true,
-    "GoogleCloudProjectId": "agt-galactic-archives-b9a30"
+    "GoogleCloudProjectId": "agt-galactic-archives-b9a30",
+    "NLog": {
+      "throwConfigExceptions": true,
+      "targets": {
+        "async": true,
+        "logconsole": {
+          "type": "ColoredConsole"
+        }
+      },
+      "rules": [
+        {
+          "logger": "*",
+          "minLevel": "Debug",
+          "writeTo": "logconsole"
+        },
+        {
+          "logger": "*",
+          "minLevel": "Error",
+          "writeTo": "logfile"
+        }
+      ]
+    }
   }
 }
