--- a/AGT.GalacticArchives.Globalization/AGT.GalacticArchives.Globalization.csproj
+++ b/AGT.GalacticArchives.Globalization/AGT.GalacticArchives.Globalization.csproj
@@ -67,6 +67,10 @@
             <Generator>PublicResXFileCodeGenerator</Generator>
             <LastGenOutput>FirebaseResource.Designer.cs</LastGenOutput>
         </EmbeddedResource>
+        <EmbeddedResource Update="GoogleSheetResource.resx">
+          <Generator>PublicResXFileCodeGenerator</Generator>
+          <LastGenOutput>GoogleSheetResource.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -139,6 +143,11 @@
             <DesignTime>True</DesignTime>
             <AutoGen>True</AutoGen>
             <DependentUpon>FirestoreResource.resx</DependentUpon>
+        </Compile>
+        <Compile Update="GoogleSheetResource.Designer.cs">
+          <DesignTime>True</DesignTime>
+          <AutoGen>True</AutoGen>
+          <DependentUpon>GoogleSheetResource.resx</DependentUpon>
         </Compile>
     </ItemGroup>
 
