--- a/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
+++ b/AGT.GalacticArchives.Core/AGT.GalacticArchives.Core.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="CsvHelper" Version="33.1.0"/>
         <PackageReference Include="FirebaseAdmin" Version="3.4.0"/>
         <PackageReference Include="Google.Cloud.Firestore" Version="3.13.0"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.4"/>
         <PackageReference Include="NLog" Version="6.0.6"/>
